@@ -1218,15 +1218,6 @@ ppl_Polyhedron_poly_difference_assign(ppl_Polyhedron_t x,
 CATCH_ALL
 
 int
-ppl_Polyhedron_poly_difference_assign_and_minimize
-(ppl_Polyhedron_t x, ppl_const_Polyhedron_t y) try {
-  Polyhedron& xx = *to_nonconst(x);
-  const Polyhedron& yy = *to_const(y);
-  return xx.poly_difference_assign_and_minimize(yy) ? 1 : 0;
-}
-CATCH_ALL
-
-int
 ppl_Polyhedron_BHRZ03_widening_assign(ppl_Polyhedron_t x,
 				      ppl_const_Polyhedron_t y) try {
   Polyhedron& xx = *to_nonconst(x);
