@@ -44,7 +44,6 @@ site: http://www.cs.unipr.it/ppl/ . */
 	ppl_Polyhedron_poly_hull_assign/2,
 	ppl_Polyhedron_poly_hull_assign_and_minimize/2,
 	ppl_Polyhedron_poly_difference_assign/2,
-	ppl_Polyhedron_poly_difference_assign_and_minimize/2,
 	ppl_Polyhedron_BHRZ03_widening_assign/2,
 	ppl_Polyhedron_limited_BHRZ03_extrapolation_assign/3,
 	ppl_Polyhedron_H79_widening_assign/2,
@@ -160,10 +159,6 @@ site: http://www.cs.unipr.it/ppl/ . */
              :: any_term * any_term + foreign.
 
 :- true pred ppl_Polyhedron_poly_difference_assign(in(Handle1), in(Handle2))
-             :: any_term * any_term + foreign.
-
-:- true pred ppl_Polyhedron_poly_difference_assign_and_minimize(in(Handle1),
-                                                                in(Handle2))
              :: any_term * any_term + foreign.
 
 :- true pred ppl_Polyhedron_BHRZ03_widening_assign(in(Handle1), in(Handle2))
@@ -304,7 +299,6 @@ site: http://www.cs.unipr.it/ppl/ . */
 	ppl_Polyhedron_poly_hull_assign/2,
 	ppl_Polyhedron_poly_hull_assign_and_minimize/2,
 	ppl_Polyhedron_poly_difference_assign/2,
-	ppl_Polyhedron_poly_difference_assign_and_minimize/2,
 	ppl_Polyhedron_BHRZ03_widening_assign/2,
 	ppl_Polyhedron_limited_BHRZ03_extrapolation_assign/3,
 	ppl_Polyhedron_H79_widening_assign/2,
