@@ -42,7 +42,6 @@ site: http://www.cs.unipr.it/ppl/ . */
 :- foreign(ppl_Polyhedron_poly_hull_assign(+term, +term)).
 :- foreign(ppl_Polyhedron_poly_hull_assign_and_minimize(+term, +term)).
 :- foreign(ppl_Polyhedron_poly_difference_assign(+term, +term)).
-:- foreign(ppl_Polyhedron_poly_difference_assign_and_minimize(+term, +term)).
 :- foreign(ppl_Polyhedron_BHRZ03_widening_assign(+term, +term)).
 :- foreign(ppl_Polyhedron_limited_BHRZ03_extrapolation_assign(+term,
 							      +term,
