@@ -151,7 +151,6 @@ SP_STUB_2(ppl_Polyhedron_concatenate_assign)
 SP_STUB_2(ppl_Polyhedron_poly_hull_assign)
 SP_STUB_2(ppl_Polyhedron_poly_hull_assign_and_minimize)
 SP_STUB_2(ppl_Polyhedron_poly_difference_assign)
-SP_STUB_2(ppl_Polyhedron_poly_difference_assign_and_minimize)
 SP_STUB_2(ppl_Polyhedron_BHRZ03_widening_assign)
 SP_STUB_3(ppl_Polyhedron_limited_BHRZ03_extrapolation_assign)
 SP_STUB_2(ppl_Polyhedron_H79_widening_assign)
@@ -225,7 +224,6 @@ ppl_sicstus_init(int /* when */) {
   SP_DEFINE_C_PREDICATE(ppl_Polyhedron_poly_hull_assign, 2);
   SP_DEFINE_C_PREDICATE(ppl_Polyhedron_poly_hull_assign_and_minimize, 2);
   SP_DEFINE_C_PREDICATE(ppl_Polyhedron_poly_difference_assign, 2);
-  SP_DEFINE_C_PREDICATE(ppl_Polyhedron_poly_difference_assign_and_minimize, 2);
   SP_DEFINE_C_PREDICATE(ppl_Polyhedron_BHRZ03_widening_assign, 2);
   SP_DEFINE_C_PREDICATE(ppl_Polyhedron_limited_BHRZ03_extrapolation_assign, 3);
   SP_DEFINE_C_PREDICATE(ppl_Polyhedron_H79_widening_assign, 2);
