@@ -395,7 +395,6 @@ Integer_to_integer_term(const PPL::Integer& n) {
 #define ppl_Polyhedron_poly_hull_assign xsb_stub_ppl_Polyhedron_poly_hull_assign
 #define ppl_Polyhedron_poly_hull_assign_and_minimize xsb_stub_ppl_Polyhedron_poly_hull_assign_and_minimize
 #define ppl_Polyhedron_poly_difference_assign xsb_stub_ppl_Polyhedron_poly_difference_assign
-#define ppl_Polyhedron_poly_difference_assign_and_minimize xsb_stub_ppl_Polyhedron_poly_difference_assign_and_minimize
 #define ppl_Polyhedron_BHRZ03_widening_assign xsb_stub_ppl_Polyhedron_BHRZ03_widening_assign
 #define ppl_Polyhedron_limited_BHRZ03_extrapolation_assign xsb_stub_ppl_Polyhedron_limited_BHRZ03_extrapolation_assign
 #define ppl_Polyhedron_H79_widening_assign xsb_stub_ppl_Polyhedron_H79_widening_assign
@@ -457,7 +456,6 @@ Integer_to_integer_term(const PPL::Integer& n) {
 #undef ppl_Polyhedron_poly_hull_assign
 #undef ppl_Polyhedron_poly_hull_assign_and_minimize
 #undef ppl_Polyhedron_poly_difference_assign
-#undef ppl_Polyhedron_poly_difference_assign_and_minimize
 #undef ppl_Polyhedron_BHRZ03_widening_assign
 #undef ppl_Polyhedron_limited_BHRZ03_extrapolation_assign
 #undef ppl_Polyhedron_H79_widening_assign
@@ -557,7 +555,6 @@ XSB_ENTRY_2(ppl_Polyhedron_concatenate_assign)
 XSB_ENTRY_2(ppl_Polyhedron_poly_hull_assign)
 XSB_ENTRY_2(ppl_Polyhedron_poly_hull_assign_and_minimize)
 XSB_ENTRY_2(ppl_Polyhedron_poly_difference_assign)
-XSB_ENTRY_2(ppl_Polyhedron_poly_difference_assign_and_minimize)
 XSB_ENTRY_2(ppl_Polyhedron_BHRZ03_widening_assign)
 XSB_ENTRY_3(ppl_Polyhedron_limited_BHRZ03_extrapolation_assign)
 XSB_ENTRY_2(ppl_Polyhedron_H79_widening_assign)
