@@ -1227,23 +1227,6 @@ ppl_Polyhedron_poly_difference_assign(Prolog_term_ref t_lhs,
 }
 
 extern "C" Prolog_foreign_return_type
-ppl_Polyhedron_poly_difference_assign_and_minimize(Prolog_term_ref t_lhs,
-						   Prolog_term_ref t_rhs) {
-  try {
-    PPL::Polyhedron* lhs = term_to_polyhedron_handle(t_lhs);
-    const PPL::Polyhedron* rhs = term_to_polyhedron_handle(t_rhs);
-    CHECK(lhs);
-    CHECK(rhs);
-    PPL::Polyhedron& x = *static_cast<PPL::Polyhedron*>(lhs);
-    const PPL::Polyhedron& y = *static_cast<const PPL::Polyhedron*>(rhs);
-    x.poly_difference_assign_and_minimize(y);
-    return PROLOG_SUCCESS;
-  }
-  CATCH_ALL;
-  return PROLOG_FAILURE;
-}
-
-extern "C" Prolog_foreign_return_type
 ppl_Polyhedron_BHRZ03_widening_assign(Prolog_term_ref t_lhs,
 				      Prolog_term_ref t_rhs) {
   try {
