@@ -108,6 +108,10 @@ o  All the input/output operators have been confined into namespace
 o  The operator Constraint operator>>(const Constraint&, unsigned int)
    has been removed.
 
+o  The method
+   Polyhedron::poly_difference_assign_and_minimize(const Polyhedron&)
+   has been removed.
+
 o  The C and Prolog interfaces have been extended so as to make more of
    the library's functionality available to Prolog and C users.
 
